objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>In-House</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>NAM Contacted</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>OC PAX</fullName>
        <description>PAX Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Open Course</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Filling up</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_for_invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(deprecated) Account for invoice</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities invoiced</relationshipLabel>
        <relationshipName>Opportunities_invoiced</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_ENS_Income__c</fullName>
        <description>(Profit Before Commissions -
(Sum(Actual commissions referrer and
Actual commission network member))
= Actual Ens Income</description>
        <formula>0
/*
IF(
RecordType.DeveloperName = &quot;In_House&quot;,
Profit_Before_Commissions__c - ( Actual_commissions_network_member__c + Actual_commissions_referrer__c),
Profit_Before_Commissions__c - ( Actual_commissions_profit__c + Actual_commissions_referrer__c)
)


(Profit Before Commissions -
(Sum(Actual Commissions Marketing and
Actual Commissions Facilitator))
= Actual Ens Income
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(dep) Actual ENS Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_commissions_referrer_AUD__c</fullName>
        <formula>Total_cost_referrer__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual cost referrer AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_end_date__c</fullName>
        <inlineHelpText>Based on time entries logged against the job. The end date is based on the latest time entry</inlineHelpText>
        <label>(deprecated) Actual end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_no_of_PAX_comparator__c</fullName>
        <inlineHelpText>Admin only.</inlineHelpText>
        <label>Actual no. of PAX comparator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_number_of_days__c</fullName>
        <inlineHelpText>Please enter the actual number of days for this Opportunity i.e. is this a 2 days course? A 4 day course?</inlineHelpText>
        <label>Actual number of days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_start_date__c</fullName>
        <inlineHelpText>Based on time entries logged against the job. The start date is based on the earliest time entry.</inlineHelpText>
        <label>(deprecated) Actual start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admin_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Admin Contact)</relationshipLabel>
        <relationshipName>Admin_contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Presenters__c</fullName>
        <label>All Presenters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_job_comments__c</fullName>
        <label>All job comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_AUD__c</fullName>
        <formula>Amount/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_comparator__c</fullName>
        <label>Amount, comparator</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_invoiced_paid_so_far_AUD__c</fullName>
        <formula>Amount_invoiced_paid_so_far__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(paused) Amount invoiced paid so far AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_invoiced_paid_so_far__c</fullName>
        <description>This was a nice to have. Not doing yet.</description>
        <inlineHelpText>The amount paid for invoices based on information from Xero.</inlineHelpText>
        <label>(paused) Amount invoiced, paid so far</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_invoiced_so_far__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the percentage of the amount invoiced (For example, if you have sent the confirmation invoice it’s 50%, and if you have sent the balance invoice it’s 100%)</inlineHelpText>
        <label>Amount invoiced so far %</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Amount_invoiced_so_far_actual_AUD__c</fullName>
        <formula>Amount_invoiced_so_far_actual__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount invoiced so far actual AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_invoiced_so_far_actual__c</fullName>
        <label>Amount invoiced so far, actual</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_invoiced_so_far_value_AUD__c</fullName>
        <formula>Amount_invoiced_so_far_value__c/Currency_exchange_rate__c</formula>
        <label>Amount invoiced so far, $ from % AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_invoiced_so_far_value__c</fullName>
        <formula>IF(Invoice_created_manually__c=True,Amount_invoiced_so_far__c*Gross_Revenue__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is only populated if we are invoicing manually. It is the calculation of the % invoiced so far (entered manually) times the Gross Revenue.</inlineHelpText>
        <label>Amount invoiced so far, $ from %</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arlo_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Arlo event this is related to</inlineHelpText>
        <label>Arlo Event</label>
        <referenceTo>arlo__Arlo_Event__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Arlo_Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to Arlo Registration</inlineHelpText>
        <label>Arlo Registration</label>
        <referenceTo>arlo__Arlo_Registration__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_as_BDM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Automatic_refresh__c</fullName>
        <description>Used in the running of automatic flows to automatically delete, and recreate certain objects related to the opportunity.</description>
        <label>Automatic refresh</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthlies</fullName>
                </value>
                <value>
                    <fullName>Extensions</fullName>
                </value>
                <value>
                    <fullName>Role Records</fullName>
                </value>
                <value>
                    <fullName>Monthlies, Extensions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance_Invoice_Number__c</fullName>
        <label>Balance Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_and_not_earned_AUD__c</fullName>
        <formula>Billed_and_not_earned__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billed and not earned AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_and_not_earned__c</fullName>
        <formula>Amount_invoiced_so_far_value__c - Revenue_recognised__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billed, and not earned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAANZ_Trns_ID__c</fullName>
        <inlineHelpText>Transaction number for registrations from Chartered Accountants Australia and New Zealand
The number is provided with all CAANZ registrations from CAANZ</inlineHelpText>
        <label>CAANZ Trns ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAANZ_registration_date__c</fullName>
        <inlineHelpText>Enter the date the pax registered with CAANZ</inlineHelpText>
        <label>CAANZ registration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSM_notified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSM notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Studies__c</fullName>
        <label>Case Studies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Certificate Type</label>
        <referenceTo>Certificate_Type__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certificate_date_text__c</fullName>
        <label>Certificate date text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Account_Group__c</fullName>
        <formula>Client_Account__r.Top_Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Account Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to capture the Account that the Job is for</description>
        <inlineHelpText>This field ONLY FOR USE if we need to put Heino, or another network member, into the Account field as they will receive the invoice for this Opportunity. In that case, put the client account here. Otherwise leave this field blank.</inlineHelpText>
        <label>Client Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Client Account)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_expiry_bump__c</fullName>
        <description>Admin only field. Indicates to the system when the Account has been bumped for particular milestones in an Opportunity.</description>
        <inlineHelpText>Admin only field. Indicates to the system when the Account has been bumped for particular milestones in an Opportunity.</inlineHelpText>
        <label>Client expiry bump</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yet to bump</fullName>
                    <default>true</default>
                    <label>Yet to bump</label>
                </value>
                <value>
                    <fullName>Bumped for proposal</fullName>
                </value>
                <value>
                    <fullName>Bumped for closed won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Child_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used In process builder</description>
        <inlineHelpText>Select this to mark all Child Opportunities as Closed Won and Calculate the Commissions</inlineHelpText>
        <label>Close child Opportunities upon save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <inlineHelpText>Select the reason the Opportunity was lost</inlineHelpText>
        <label>Closed / Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Proposal Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Price too high</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>NAM Left</fullName>
                </value>
                <value>
                    <fullName>Change in need</fullName>
                </value>
                <value>
                    <fullName>Comparative pricing</fullName>
                </value>
                <value>
                    <fullName>Moved Course</fullName>
                </value>
                <value>
                    <fullName>Purchased ENSI alternative</fullName>
                </value>
                <value>
                    <fullName>Choose other option</fullName>
                    <isActive>false</isActive>
                    <label>Choose other option</label>
                </value>
                <value>
                    <fullName>Requirements not met</fullName>
                    <isActive>false</isActive>
                    <label>Requirements not met</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_won_actions_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed won actions complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_records_added_M_Sell_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as Part of process builder too stop process from running many times</description>
        <inlineHelpText>Used to Identify that commission record have been generated</inlineHelpText>
        <label>Commission records added M Sell 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_records_added_M_Sell_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as Part of process builder too stop process from running many times</description>
        <inlineHelpText>Used to Identify that commission record have been generated</inlineHelpText>
        <label>Commission records added M Sell 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_records_added_M_Spot_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as Part of process builder too stop process from running many times</description>
        <inlineHelpText>Used to Identify that commission record have been generated</inlineHelpText>
        <label>Commission records added M Spot 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_records_added_M_Spot_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as Part of process builder too stop process from running many times</description>
        <inlineHelpText>Used to Identify that commission record have been generated</inlineHelpText>
        <label>Commission records added M Spot 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_records_added_Referrer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to identify that commission record has been created</inlineHelpText>
        <label>Commission records added Referrer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_records_added_S_Fac1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as Part of process builder too stop process from running many times</description>
        <inlineHelpText>Used to Identify that commission record have been generated</inlineHelpText>
        <label>Commission records added S Fac1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_records_added_S_Fac2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as Part of process builder too stop process from running many times</description>
        <inlineHelpText>Used to Identify that commission record have been generated</inlineHelpText>
        <label>Commission records added S Fac2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_records_added_S_Fac3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commission records added S Fac3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_records_added_S_Sell_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as Part of process builder too stop process from running many times</description>
        <inlineHelpText>Used to Identify that commission record have been generated</inlineHelpText>
        <label>Commission records added S Sell 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_records_added_S_Sell_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as Part of process builder too stop process from running many times</description>
        <inlineHelpText>Used to Identify that commission record have been generated</inlineHelpText>
        <label>Commission records added S Sell 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_records_added_S_Spot_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as Part of process builder too stop process from running many times</description>
        <inlineHelpText>Used to Identify that commission record have been generated</inlineHelpText>
        <label>Commission records added S Spot 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_records_added_S_Spot_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as Part of process builder too stop process from running many times</description>
        <inlineHelpText>Used to Identify that commission record have been generated</inlineHelpText>
        <label>Commission records added S Spot 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commissions_Invoices_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commissions / Invoices created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commissions_from_PAX_AUD__c</fullName>
        <formula>Commissions_from_PAX__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee splits from PAX AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissions_from_PAX__c</fullName>
        <inlineHelpText>Calculates all fee splits paid on Child Opportunities This is only once child record has been marked &quot;Ready to Calculate Commission&quot;</inlineHelpText>
        <label>Fee splits from PAX</label>
        <summarizedField>Opportunity_Joiner__c.Total_Commission_Child__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Joiner__c.Is_PAX_Stage_Closed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Joiner__c.Is_Closed_Lost__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Joiner__c.Opportunity_Parent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Commissions_from_PAX_comparator__c</fullName>
        <label>Fee splits from PAX, comparator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissions_manual_override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox ONLY if you need to override commissions after they have been calculated by the system.</inlineHelpText>
        <label>(dep) Commissions manual override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation_Invoice_Number__c</fullName>
        <label>Confirmation Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_PAX__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Contact for the person participating</inlineHelpText>
        <label>Contact PAX</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact PAX)</relationshipLabel>
        <relationshipName>Opportunities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_for_invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please enter the contact that should appear on the invoice. If this is the NAM (for In-house) or PAX (for OC PAX) then you can leave this field blank and it will be populated by those fields.</inlineHelpText>
        <label>Contact for invoice</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities as Contact for invoice</relationshipLabel>
        <relationshipName>Opportunities_as_contact_for_invoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_products_from_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>By selecting an Opportunity here you will copy ALL products from it and add them to this Opportunity</inlineHelpText>
        <label>Copy products from Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Opportunity products can only be copied from other Opportunities with the same Opportunity record type.</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <valueField>$Source.RecordTypeId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Products copied to</relationshipLabel>
        <relationshipName>Opportunities_copied_to</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_actions_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Admin only</inlineHelpText>
        <label>Created actions complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_exchange_rate__c</fullName>
        <description>This field picks the relevant exchange rate to use. Override is the top, then invoice, otherwise use system. It used to be a simple if, but somewhere along the line we exceeded the formula char limit so now it is set (in the other field) by a process.</description>
        <formula>exch_rate__c</formula>
        <label>Currency exchange rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_exchange_rate_override__c</fullName>
        <inlineHelpText>Use this field to override the currency exchange rate.</inlineHelpText>
        <label>Currency exchange rate, manual override</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Materials_sent__c</fullName>
        <label>Date Materials sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_recognised__c</fullName>
        <formula>0 / Hours_in_a_day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(deprecated) Days recognised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_remaining__c</fullName>
        <formula>Days_sold__c - Days_worked_ad_hoc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days remaining (ad hoc)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_sold__c</fullName>
        <label>Days sold (ad hoc)</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Quantity_unit_of_measure__c</field>
            <operation>startsWith</operation>
            <value>Day</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Type__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Related_to_date__c</field>
            <operation>equals</operation>
            <value>Ad Hoc</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Days_worked_ad_hoc__c</fullName>
        <label>Days worked (ad hoc)</label>
        <summarizedField>Opportunity_Role__c.Total_fac_days_ad_hoc__c</summarizedField>
        <summaryForeignKey>Opportunity_Role__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Days_worked_as_of_Days_sold__c</fullName>
        <formula>Days_worked_ad_hoc__c / Days_sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days worked as % of Days sold</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deadline_for_contact__c</fullName>
        <label>Deadline for contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deducted_fees_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deducted fees created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployment updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENSI_Commission_Materials_Dollar__c</fullName>
        <formula>ENSI_split_materials_Pec__c  * Total_Materials_After_Referrer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(dep.) ENSI Commission Materials ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENSI_Commission_Services_Dollar__c</fullName>
        <formula>ENSI_split_services_Per__c *  Value_For_Services_Profit_Commissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ENSI split services % x In-House Service</inlineHelpText>
        <label>(dep.) ENSI Commission Services ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENSI_income_AUD__c</fullName>
        <formula>ENSI_income__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ENSI Income AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENSI_income__c</fullName>
        <formula>Profit_Before_Commissions__c - (Total_mark_fee_split_sum__c + Total_fac_fee_split_sum__c + Total_cost_referrer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The actual amount ENSI will earn. Includes service fee and materials</inlineHelpText>
        <label>ENSI Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENSI_split_materials_Pec__c</fullName>
        <defaultValue>0.80</defaultValue>
        <label>ENSI split materials %</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ENSI_split_services_Per__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ENSI split services %</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Est_Comm_Fac_Ser_ORR_AUD__c</fullName>
        <formula>Total_fac_fee_split_serv_ad_hoc__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Comm Fac Ser ORR AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Comm_Fac_Ser_ORR_Ad_Hoc_AUD__c</fullName>
        <formula>Total_fac_fee_split_serv__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Comm Fac Ser ORR Ad Hoc AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Comm_Faci_Ser_Calc_AUD__c</fullName>
        <formula>Est_Comm_Faci_Ser_Calc__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Comm Faci Ser Calc AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Comm_Faci_Ser_Calc__c</fullName>
        <description>Used for process only</description>
        <label>Est Comm Faci, Ser Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Comm_Faci_Ser_Formula__c</fullName>
        <formula>Facilitator_1_Commission_Services_Dollar__c+Facilitator_2_Commission_Services_Dollar__c+Facilitator_3_Commission_Services_Dollar__c+Facilitator_4_Commission_Services_Dollar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Comm Faci, Ser Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>